# module-37_task-1

./: CMakeLists.txt  calculator.ui  readme.md
include/: calculatormainwindow.h
src/: CMakeLists.txt  calculatormainwindow.cpp  main.cpp
